--- a/eula.html
+++ b/eula.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Cek Tagihan Online</title>
+<title>BELAJAR 25 KISAH NABI DAN RASUL</title>
 
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 <meta http-equiv="keywords" content="sipdah " />
@@ -31,7 +31,7 @@
   </tr>
 </table>
 
-<div style="background-color: #f2f2f2; cursor: pointer; padding: 5px; width: auto;"><h1 align="center">Cek Tagihan Online 4</h1>
+<div style="background-color: #f2f2f2; cursor: pointer; padding: 5px; width: auto;"><h1 align="center">BELAJAR 25 KISAH NABI DAN RASUL</h1>
 <h1 align="center">Copyright (c) 2018 D2 Tech</h1>
 
 <p align="center">
@@ -45,25 +45,25 @@ IMPORTANT: PLEASE READ THIS LICENSE CAREFULLY BEFORE USING THIS SOFTWARE.
 <h2>1. LICENSE</h2>
 
 <p>
-By receiving, opening the file package, and/or using Cek Tagihan Online 4("Software") containing this software, you agree that this End User User License Agreement(EULA) is a legally binding and valid contract and agree to be bound by it. You agree to abide by the intellectual property laws and all of the terms and conditions of this Agreement.
+By receiving, opening the file package, and/or using BELAJAR 25 KISAH NABI DAN RASUL("Software") containing this software, you agree that this End User User License Agreement(EULA) is a legally binding and valid contract and agree to be bound by it. You agree to abide by the intellectual property laws and all of the terms and conditions of this Agreement.
 </p>
 
 <p>
-Unless you have a different license agreement signed by D2 Tech your use of Cek Tagihan Online 4 indicates your acceptance of this license agreement and warranty.
+Unless you have a different license agreement signed by D2 Tech your use of BELAJAR 25 KISAH NABI DAN RASUL indicates your acceptance of this license agreement and warranty.
 </p>
 
 <p>
-Subject to the terms of this Agreement, D2 Tech grants to you a limited, non-exclusive, non-transferable license, without right to sub-license, to use Cek Tagihan Online 4 in accordance with this Agreement and any other written agreement with D2 Tech. D2 Tech does not transfer the title of Cek Tagihan Online 4 to you; the license granted to you is not a sale. This agreement is a binding legal agreement between D2 Tech and the purchasers or users of Cek Tagihan Online 4.
+Subject to the terms of this Agreement, D2 Tech grants to you a limited, non-exclusive, non-transferable license, without right to sub-license, to use BELAJAR 25 KISAH NABI DAN RASUL in accordance with this Agreement and any other written agreement with D2 Tech. D2 Tech does not transfer the title of BELAJAR 25 KISAH NABI DAN RASUL to you; the license granted to you is not a sale. This agreement is a binding legal agreement between D2 Tech and the purchasers or users of BELAJAR 25 KISAH NABI DAN RASUL.
 </p>
 
 <p>
-If you do not agree to be bound by this agreement, remove Cek Tagihan Online 4 from your computer now and, if applicable, promptly return to D2 Tech by mail any copies of Cek Tagihan Online 4 and related documentation and packaging in your possession. 
+If you do not agree to be bound by this agreement, remove BELAJAR 25 KISAH NABI DAN RASUL from your computer now and, if applicable, promptly return to D2 Tech by mail any copies of BELAJAR 25 KISAH NABI DAN RASUL and related documentation and packaging in your possession. 
 </p>
  
 <h2>2. DISTRIBUTION</h2>
 
 <p>
-Cek Tagihan Online 4 and the license herein granted shall not be copied, shared, distributed, re-sold, offered for re-sale, transferred or sub-licensed in whole or in part except that you may make one copy for archive purposes only. For information about redistribution of Cek Tagihan Online 4 contact D2 Tech.
+BELAJAR 25 KISAH NABI DAN RASUL and the license herein granted shall not be copied, shared, distributed, re-sold, offered for re-sale, transferred or sub-licensed in whole or in part except that you may make one copy for archive purposes only. For information about redistribution of BELAJAR 25 KISAH NABI DAN RASUL contact D2 Tech.
 </p>
  
 <h2>3. USER AGREEMENT</h2>
@@ -71,35 +71,35 @@ Cek Tagihan Online 4 and the license herein granted shall not be copied, shared,
 <h3>3.1 Use</h3>
 
 <p>
-Your license to use Cek Tagihan Online 4 is limited to the number of licenses purchased by you. You shall not allow others to use, copy or evaluate copies of Cek Tagihan Online 4.
+Your license to use BELAJAR 25 KISAH NABI DAN RASUL is limited to the number of licenses purchased by you. You shall not allow others to use, copy or evaluate copies of BELAJAR 25 KISAH NABI DAN RASUL.
 </p>
 
 <h3>3.2 Use Restrictions</h3>
 
 <p>
-You shall use Cek Tagihan Online 4 in compliance with all applicable laws and not for any unlawful purpose. Without limiting the foregoing, use, display or distribution of Cek Tagihan Online 4 together with material that is pornographic, racist, vulgar, obscene, defamatory, libelous, abusive, promoting hatred, discriminating or displaying prejudice based on religion, ethnic heritage, race, sexual orientation or age is strictly prohibited.
+You shall use BELAJAR 25 KISAH NABI DAN RASUL in compliance with all applicable laws and not for any unlawful purpose. Without limiting the foregoing, use, display or distribution of BELAJAR 25 KISAH NABI DAN RASUL together with material that is pornographic, racist, vulgar, obscene, defamatory, libelous, abusive, promoting hatred, discriminating or displaying prejudice based on religion, ethnic heritage, race, sexual orientation or age is strictly prohibited.
 </p>
 
 <p>
-Each licensed copy of Cek Tagihan Online 4 may be used on one single computer location by one user. Use of Cek Tagihan Online 4 means that you have loaded, installed, or run Cek Tagihan Online 4 on a computer or similar device. If you install Cek Tagihan Online 4 onto a multi-user platform, server or network, each and every individual user of Cek Tagihan Online 4 must be licensed separately.
+Each licensed copy of BELAJAR 25 KISAH NABI DAN RASUL may be used on one single computer location by one user. Use of BELAJAR 25 KISAH NABI DAN RASUL means that you have loaded, installed, or run BELAJAR 25 KISAH NABI DAN RASUL on a computer or similar device. If you install BELAJAR 25 KISAH NABI DAN RASUL onto a multi-user platform, server or network, each and every individual user of BELAJAR 25 KISAH NABI DAN RASUL must be licensed separately.
 </p>
 
 <p>
-You may make one copy of Cek Tagihan Online 4 for backup purposes, providing you only have one copy installed on one computer being used by one person. Other users may not use your copy of Cek Tagihan Online 4 . The assignment, sublicense, networking, sale, or distribution of copies of Cek Tagihan Online 4 are strictly forbidden without the prior written consent of D2 Tech. It is a violation of this agreement to assign, sell, share, loan, rent, lease, borrow, network or transfer the use of Cek Tagihan Online 4. If any person other than yourself uses Cek Tagihan Online 4 registered in your name, regardless of whether it is at the same time or different times, then this agreement is being violated and you are responsible for that violation!  
+You may make one copy of BELAJAR 25 KISAH NABI DAN RASUL for backup purposes, providing you only have one copy installed on one computer being used by one person. Other users may not use your copy of BELAJAR 25 KISAH NABI DAN RASUL . The assignment, sublicense, networking, sale, or distribution of copies of BELAJAR 25 KISAH NABI DAN RASUL are strictly forbidden without the prior written consent of D2 Tech. It is a violation of this agreement to assign, sell, share, loan, rent, lease, borrow, network or transfer the use of BELAJAR 25 KISAH NABI DAN RASUL. If any person other than yourself uses BELAJAR 25 KISAH NABI DAN RASUL registered in your name, regardless of whether it is at the same time or different times, then this agreement is being violated and you are responsible for that violation!  
 </p>
 
 <h3>3.3 Copyright Restriction</h3>
 
 <p>
-This Software contains copyrighted material, trade secrets and other proprietary material. You shall not, and shall not attempt to, modify, reverse engineer, disassemble or decompile Cek Tagihan Online 4. Nor can you create any derivative works or other works that are based upon or derived from Cek Tagihan Online 4 in whole or in part.
+This Software contains copyrighted material, trade secrets and other proprietary material. You shall not, and shall not attempt to, modify, reverse engineer, disassemble or decompile BELAJAR 25 KISAH NABI DAN RASUL. Nor can you create any derivative works or other works that are based upon or derived from BELAJAR 25 KISAH NABI DAN RASULin whole or in part.
 </p>
   
 </p>
-D2 Tech's name, logo and graphics file that represents Cek Tagihan Online 4 shall not be used in any way to promote products developed with Cek Tagihan Online 4 . D2 Tech retains sole and exclusive ownership of all right, title and interest in and to Cek Tagihan Online 4 and all Intellectual Property rights relating thereto.
+D2 Tech's name, logo and graphics file that represents BELAJAR 25 KISAH NABI DAN RASUL shall not be used in any way to promote products developed with BELAJAR 25 KISAH NABI DAN RASUL . D2 Tech retains sole and exclusive ownership of all right, title and interest in and to BELAJAR 25 KISAH NABI DAN RASUL and all Intellectual Property rights relating thereto.
 </p>
 
 </p>
-Copyright law and international copyright treaty provisions protect all parts of Cek Tagihan Online 4, products and services. No program, code, part, image, audio sample, or text may be copied or used in any way by the user except as intended within the bounds of the single user program. All rights not expressly granted hereunder are reserved for D2 Tech. 
+Copyright law and international copyright treaty provisions protect all parts of BELAJAR 25 KISAH NABI DAN RASUL, products and services. No program, code, part, image, audio sample, or text may be copied or used in any way by the user except as intended within the bounds of the single user program. All rights not expressly granted hereunder are reserved for D2 Tech. 
 </p>
 
 <h3>3.4 Limitation of Responsibility</h3>
@@ -109,7 +109,7 @@ You will indemnify, hold harmless, and defend D2 Tech , its employees, agents an
 </p>
 
 <p>
-In no event (including, without limitation, in the event of negligence) will D2 Tech , its employees, agents or distributors be liable for any consequential, incidental, indirect, special or punitive damages whatsoever (including, without limitation, damages for loss of profits, loss of use, business interruption, loss of information or data, or pecuniary loss), in connection with or arising out of or related to this Agreement, Cek Tagihan Online 4 or the use or inability to use Cek Tagihan Online 4 or the furnishing, performance or use of any other matters hereunder whether based upon contract, tort or any other theory including negligence.
+In no event (including, without limitation, in the event of negligence) will D2 Tech , its employees, agents or distributors be liable for any consequential, incidental, indirect, special or punitive damages whatsoever (including, without limitation, damages for loss of profits, loss of use, business interruption, loss of information or data, or pecuniary loss), in connection with or arising out of or related to this Agreement, BELAJAR 25 KISAH NABI DAN RASUL or the use or inability to use BELAJAR 25 KISAH NABI DAN RASUL or the furnishing, performance or use of any other matters hereunder whether based upon contract, tort or any other theory including negligence.
 </p>
 
 <p> 
@@ -131,19 +131,19 @@ This Agreement shall be governed by the law of the Indonesia applicable therein.
 <h3>3.7 Termination</h3>
 
 <p>
-Any failure to comply with the terms and conditions of this Agreement will result in automatic and immediate termination of this license. Upon termination of this license granted herein for any reason, you agree to immediately cease use of Cek Tagihan Online 4 and destroy all copies of Cek Tagihan Online 4 supplied under this Agreement. The financial obligations incurred by you shall survive the expiration or termination of this license.  
+Any failure to comply with the terms and conditions of this Agreement will result in automatic and immediate termination of this license. Upon termination of this license granted herein for any reason, you agree to immediately cease use of BELAJAR 25 KISAH NABI DAN RASUL and destroy all copies of BELAJAR 25 KISAH NABI DAN RASUL supplied under this Agreement. The financial obligations incurred by you shall survive the expiration or termination of this license.  
 </p>
 
 <h2>4. DISCLAIMER OF WARRANTY</h2>
 
 <p>
-THIS SOFTWARE AND THE ACCOMPANYING FILES ARE SOLD "AS IS" AND WITHOUT WARRANTIES AS TO PERFORMANCE OR MERCHANTABILITY OR ANY OTHER WARRANTIES WHETHER EXPRESSED OR IMPLIED. THIS DISCLAIMER CONCERNS ALL FILES GENERATED AND EDITED BY Cek Tagihan Online 4 AS WELL.
+THIS SOFTWARE AND THE ACCOMPANYING FILES ARE SOLD "AS IS" AND WITHOUT WARRANTIES AS TO PERFORMANCE OR MERCHANTABILITY OR ANY OTHER WARRANTIES WHETHER EXPRESSED OR IMPLIED. THIS DISCLAIMER CONCERNS ALL FILES GENERATED AND EDITED BY BELAJAR 25 KISAH NABI DAN RASUL AS WELL.
 </p>
 
 <h2>5. CONSENT OF USE OF DATA</h2>
 
 <p>
-You agree that D2 Tech may collect and use information gathered in any manner as part of the product support services provided to you, if any, related to Cek Tagihan Online 4.D2 Tech may also use this information to provide notices to you which may be of use or interest to you.
+You agree that D2 Tech may collect and use information gathered in any manner as part of the product support services provided to you, if any, related to BELAJAR 25 KISAH NABI DAN RASUL.D2 Tech may also use this information to provide notices to you which may be of use or interest to you.
 </p> 	
     <p align="justify"><div>
       <div align="center"></div>
