--- a/eula.html
+++ b/eula.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 <meta http-equiv="keywords" content="sipdah " />
-<meta http-equiv="description" content="sipdah developer" />
+<meta http-equiv="description" content="Mi1devz developer" />
 <link href="css/style.css"rel="stylesheet" type="text/css" />
 
 <style type="text/css">
@@ -32,7 +32,7 @@
 </table>
 
 <div style="background-color: #f2f2f2; cursor: pointer; padding: 5px; width: auto;"><h1 align="center">BELAJAR 25 KISAH NABI DAN RASUL</h1>
-<h1 align="center">Copyright (c) 2018 D2 Tech</h1>
+<h1 align="center">Copyright (c) 2018 Mi1devz</h1>
 
 <p align="center">
 *** END USER LICENSE AGREEMENT ***  
@@ -49,21 +49,21 @@ By receiving, opening the file package, and/or using BELAJAR 25 KISAH NABI DAN R
 </p>
 
 <p>
-Unless you have a different license agreement signed by D2 Tech your use of BELAJAR 25 KISAH NABI DAN RASUL indicates your acceptance of this license agreement and warranty.
+Unless you have a different license agreement signed by Mi1devz your use of BELAJAR 25 KISAH NABI DAN RASUL indicates your acceptance of this license agreement and warranty.
 </p>
 
 <p>
-Subject to the terms of this Agreement, D2 Tech grants to you a limited, non-exclusive, non-transferable license, without right to sub-license, to use BELAJAR 25 KISAH NABI DAN RASUL in accordance with this Agreement and any other written agreement with D2 Tech. D2 Tech does not transfer the title of BELAJAR 25 KISAH NABI DAN RASUL to you; the license granted to you is not a sale. This agreement is a binding legal agreement between D2 Tech and the purchasers or users of BELAJAR 25 KISAH NABI DAN RASUL.
+Subject to the terms of this Agreement, Mi1devz grants to you a limited, non-exclusive, non-transferable license, without right to sub-license, to use BELAJAR 25 KISAH NABI DAN RASUL in accordance with this Agreement and any other written agreement with Mi1devz. Mi1devz does not transfer the title of BELAJAR 25 KISAH NABI DAN RASUL to you; the license granted to you is not a sale. This agreement is a binding legal agreement between Mi1devz and the purchasers or users of BELAJAR 25 KISAH NABI DAN RASUL.
 </p>
 
 <p>
-If you do not agree to be bound by this agreement, remove BELAJAR 25 KISAH NABI DAN RASUL from your computer now and, if applicable, promptly return to D2 Tech by mail any copies of BELAJAR 25 KISAH NABI DAN RASUL and related documentation and packaging in your possession. 
+If you do not agree to be bound by this agreement, remove BELAJAR 25 KISAH NABI DAN RASUL from your computer now and, if applicable, promptly return to Mi1devz by mail any copies of BELAJAR 25 KISAH NABI DAN RASUL and related documentation and packaging in your possession. 
 </p>
  
 <h2>2. DISTRIBUTION</h2>
 
 <p>
-BELAJAR 25 KISAH NABI DAN RASUL and the license herein granted shall not be copied, shared, distributed, re-sold, offered for re-sale, transferred or sub-licensed in whole or in part except that you may make one copy for archive purposes only. For information about redistribution of BELAJAR 25 KISAH NABI DAN RASUL contact D2 Tech.
+BELAJAR 25 KISAH NABI DAN RASUL and the license herein granted shall not be copied, shared, distributed, re-sold, offered for re-sale, transferred or sub-licensed in whole or in part except that you may make one copy for archive purposes only. For information about redistribution of BELAJAR 25 KISAH NABI DAN RASUL contact Mi1devz.
 </p>
  
 <h2>3. USER AGREEMENT</h2>
@@ -85,7 +85,7 @@ Each licensed copy of BELAJAR 25 KISAH NABI DAN RASUL may be used on one single 
 </p>
 
 <p>
-You may make one copy of BELAJAR 25 KISAH NABI DAN RASUL for backup purposes, providing you only have one copy installed on one computer being used by one person. Other users may not use your copy of BELAJAR 25 KISAH NABI DAN RASUL . The assignment, sublicense, networking, sale, or distribution of copies of BELAJAR 25 KISAH NABI DAN RASUL are strictly forbidden without the prior written consent of D2 Tech. It is a violation of this agreement to assign, sell, share, loan, rent, lease, borrow, network or transfer the use of BELAJAR 25 KISAH NABI DAN RASUL. If any person other than yourself uses BELAJAR 25 KISAH NABI DAN RASUL registered in your name, regardless of whether it is at the same time or different times, then this agreement is being violated and you are responsible for that violation!  
+You may make one copy of BELAJAR 25 KISAH NABI DAN RASUL for backup purposes, providing you only have one copy installed on one computer being used by one person. Other users may not use your copy of BELAJAR 25 KISAH NABI DAN RASUL . The assignment, sublicense, networking, sale, or distribution of copies of BELAJAR 25 KISAH NABI DAN RASUL are strictly forbidden without the prior written consent of Mi1devz. It is a violation of this agreement to assign, sell, share, loan, rent, lease, borrow, network or transfer the use of BELAJAR 25 KISAH NABI DAN RASUL. If any person other than yourself uses BELAJAR 25 KISAH NABI DAN RASUL registered in your name, regardless of whether it is at the same time or different times, then this agreement is being violated and you are responsible for that violation!  
 </p>
 
 <h3>3.3 Copyright Restriction</h3>
@@ -95,31 +95,31 @@ This Software contains copyrighted material, trade secrets and other proprietary
 </p>
   
 </p>
-D2 Tech's name, logo and graphics file that represents BELAJAR 25 KISAH NABI DAN RASUL shall not be used in any way to promote products developed with BELAJAR 25 KISAH NABI DAN RASUL . D2 Tech retains sole and exclusive ownership of all right, title and interest in and to BELAJAR 25 KISAH NABI DAN RASUL and all Intellectual Property rights relating thereto.
+Mi1devz's name, logo and graphics file that represents BELAJAR 25 KISAH NABI DAN RASUL shall not be used in any way to promote products developed with BELAJAR 25 KISAH NABI DAN RASUL . Mi1devz retains sole and exclusive ownership of all right, title and interest in and to BELAJAR 25 KISAH NABI DAN RASUL and all Intellectual Property rights relating thereto.
 </p>
 
 </p>
-Copyright law and international copyright treaty provisions protect all parts of BELAJAR 25 KISAH NABI DAN RASUL, products and services. No program, code, part, image, audio sample, or text may be copied or used in any way by the user except as intended within the bounds of the single user program. All rights not expressly granted hereunder are reserved for D2 Tech. 
+Copyright law and international copyright treaty provisions protect all parts of BELAJAR 25 KISAH NABI DAN RASUL, products and services. No program, code, part, image, audio sample, or text may be copied or used in any way by the user except as intended within the bounds of the single user program. All rights not expressly granted hereunder are reserved for Mi1devz. 
 </p>
 
 <h3>3.4 Limitation of Responsibility</h3>
 
 <p>
-You will indemnify, hold harmless, and defend D2 Tech , its employees, agents and distributors against any and all claims, proceedings, demand and costs resulting from or in any way connected with your use of D2 Tech's Software.
+You will indemnify, hold harmless, and defend Mi1devz , its employees, agents and distributors against any and all claims, proceedings, demand and costs resulting from or in any way connected with your use of Mi1devz's Software.
 </p>
 
 <p>
-In no event (including, without limitation, in the event of negligence) will D2 Tech , its employees, agents or distributors be liable for any consequential, incidental, indirect, special or punitive damages whatsoever (including, without limitation, damages for loss of profits, loss of use, business interruption, loss of information or data, or pecuniary loss), in connection with or arising out of or related to this Agreement, BELAJAR 25 KISAH NABI DAN RASUL or the use or inability to use BELAJAR 25 KISAH NABI DAN RASUL or the furnishing, performance or use of any other matters hereunder whether based upon contract, tort or any other theory including negligence.
+In no event (including, without limitation, in the event of negligence) will Mi1devz , its employees, agents or distributors be liable for any consequential, incidental, indirect, special or punitive damages whatsoever (including, without limitation, damages for loss of profits, loss of use, business interruption, loss of information or data, or pecuniary loss), in connection with or arising out of or related to this Agreement, BELAJAR 25 KISAH NABI DAN RASUL or the use or inability to use BELAJAR 25 KISAH NABI DAN RASUL or the furnishing, performance or use of any other matters hereunder whether based upon contract, tort or any other theory including negligence.
 </p>
 
 <p> 
-D2 Tech's entire liability, without exception, is limited to the customers' reimbursement of the purchase price of the Software (maximum being the lesser of the amount paid by you and the suggested retail price as listed by D2 Tech ) in exchange for the return of the product, all copies, registration papers and manuals, and all materials that constitute a transfer of license from the customer back to D2 Tech.
+D2 Tech's entire liability, without exception, is limited to the customers' reimbursement of the purchase price of the Software (maximum being the lesser of the amount paid by you and the suggested retail price as listed by Mi1devz ) in exchange for the return of the product, all copies, registration papers and manuals, and all materials that constitute a transfer of license from the customer back to Mi1devz.
 </p>
   
 <h3>3.5 Warranties</h3>
 
 <p>
-Except as expressly stated in writing, D2 Tech makes no representation or warranties in respect of this Software and expressly excludes all other warranties, expressed or implied, oral or written, including, without limitation, any implied warranties of merchantable quality or fitness for a particular purpose.
+Except as expressly stated in writing, Mi1devz makes no representation or warranties in respect of this Software and expressly excludes all other warranties, expressed or implied, oral or written, including, without limitation, any implied warranties of merchantable quality or fitness for a particular purpose.
 </p>
 
 <h3>3.6 Governing Law</h3>
